fixed bug with wrong sizes of edit buttons

--- a/src/client/components/NoteList/Note/Note.css
+++ b/src/client/components/NoteList/Note/Note.css
@@ -1,121 +1,118 @@
 :root {
-    --main-note-color:#f8dfc2;
-    --add-theme-color:#013ca6;
-    --main-font: 'Roboto';
+  --main-note-color: #f8dfc2;
+  --add-theme-color: #013ca6;
+  --main-font: "Roboto";
 }
 
 body {
-    text-align:center;
+  text-align: center;
 }
 hr#title-line {
-    width: 95%;
-    background-color: grey;
-    border: none;
-    height:1px;
+  width: 95%;
+  background-color: grey;
+  border: none;
+  height: 1px;
 }
 .edit-icon {
-width: 50%;
+  width: 50%;
 }
 #title {
-    font-family: var(--main-font);
-    font-size: larger;
-    color:grey;
-    padding: 3px 8px;
+  font-family: var(--main-font);
+  font-size: larger;
+  color: grey;
+  padding: 3px 8px;
 }
 
 .primary {
-    cursor: pointer;
-    border: none;
-    font-family:var(--main-font);
-    background-color: var(--add-theme-color);
-    color:white;
+  cursor: pointer;
+  border: none;
+  font-family: var(--main-font);
+  background-color: var(--add-theme-color);
+  color: white;
 
-    padding: 10px 18px;
-    
-  }
-.note{
-    height:170px;
-    display: block;
-    margin-right:8px;
-    padding: 5px 10px 15px 5px;
-    
-    font-family: var(--main-font);
-
-    border-radius: 5%;
-    border: 2px solid grey;
-
-    background-color:var(--main-note-color);
+  padding: 10px 18px;
 }
+.note {
+  height: 170px;
+  display: block;
+  margin-right: 8px;
+  padding: 5px 10px 15px 5px;
 
-input#editNote {    
-text-align: center;
-    display: block;
-   width:100%;
-   border:none;
-   height:100%;
-   background-color:white;
+  font-family: var(--main-font);
 
+  border-radius: 5%;
+  border: 2px solid grey;
+
+  background-color: var(--main-note-color);
+}
+.edit-icon.MuiIconButton-root {
+  width: 50%;
+}
+input#editNote {
+  text-align: center;
+  display: block;
+  width: 100%;
+  border: none;
+  height: 100%;
+  background-color: white;
 }
 
 input#editNote:enabled {
-    background-color:white;
-    border:none;
-    font-size: medium;
-    outline: none;
-    font-family: var(--main-font);
+  background-color: white;
+  border: none;
+  font-size: medium;
+  outline: none;
+  font-family: var(--main-font);
 }
-
 
 .note-content {
-    display: block;
-    padding:5px;
-    word-wrap: break-word;
-    width: 90%;
-    height: 100px;
-    background-color: var(--main-note-color);
-    border-radius: 3%;
-    white-space: normal;
-    text-align: center;
-
+  display: block;
+  padding: 5px;
+  word-wrap: break-word;
+  width: 90%;
+  height: 100px;
+  background-color: var(--main-note-color);
+  border-radius: 3%;
+  white-space: normal;
+  text-align: center;
 }
 .shared-note {
-    width:200px;
+  width: 200px;
 }
 li {
-    width:200px;
-    list-style-type: none;    
-    display: inline-block;
+  width: 200px;
+  list-style-type: none;
+  display: inline-block;
 }
 ul {
-    padding:0;
-    list-style-type: none;
+  padding: 0;
+  list-style-type: none;
 }
 .icon-button {
-    float: right;
+  float: right;
 }
 input[name="edit"] {
-    display:block;
-    width:20px;
-    height:25px;
-    float:right;
-    border: none;
+  display: block;
+  width: 20px;
+  height: 25px;
+  float: right;
+  border: none;
 
-    background-color: transparent;
-    background-image: url('images/edit.png');
-    background-repeat: no-repeat;
-    background-size: 20px 20px;
-    background-position: center;
+  background-color: transparent;
+  background-image: url("images/edit.png");
+  background-repeat: no-repeat;
+  background-size: 20px 20px;
+  background-position: center;
 }
-input[name='edit']:hover {
-    cursor: pointer;
+input[name="edit"]:hover {
+  cursor: pointer;
 }
-input[name='delete']:hover {
-    cursor: pointer;
+input[name="delete"]:hover {
+  cursor: pointer;
 }
 input[name="edit"]:focus {
-    border:3px solid var(--add-theme-color);
+  border: 3px solid var(--add-theme-color);
 }
 input[name="delete"]:focus {
-    border:3px solid var(--add-theme-color);
+  border: 3px solid var(--add-theme-color);
 }
-
